--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Criação de componente card com tailwindcss">
     <link rel="stylesheet" href="styles.css">
     <title>Obrigado</title>
-    <link rel="icon" type="image/x-icon" href="/src/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./src/images/favicon.ico">
     <script type="module" src="main.js"></script>
 </head>
 
