fix: bug em caminho do favicon

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,13 +10,13 @@
     <meta name="description" content="Criação de componente card com tailwindcss">
     <link rel="stylesheet" href="styles.css">
     <title>Obrigado</title>
-    <link rel="icon" type="image/x-icon" href="./src/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <script type="module" src="main.js"></script>
 </head>
 
 <body class="flex items-center justify-center w-screen h-screen bg-_blue">
-    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="visual"
-        viewBox="0 0 900 600" version="1.1" class="absolute bottom-0 left-0 w-screen -z-50">
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="visual" viewBox="0 0 900 600"
+        version="1.1" class="absolute bottom-0 left-0 w-screen -z-50">
         <path
             d="M0 363L16.7 354C33.3 345 66.7 327 100 328.5C133.3 330 166.7 351 200 354.7C233.3 358.3 266.7 344.7 300 348C333.3 351.3 366.7 371.7 400 378.3C433.3 385 466.7 378 500 366C533.3 354 566.7 337 600 333.5C633.3 330 666.7 340 700 343.5C733.3 347 766.7 344 800 340.7C833.3 337.3 866.7 333.7 883.3 331.8L900 330L900 601L883.3 601C866.7 601 833.3 601 800 601C766.7 601 733.3 601 700 601C666.7 601 633.3 601 600 601C566.7 601 533.3 601 500 601C466.7 601 433.3 601 400 601C366.7 601 333.3 601 300 601C266.7 601 233.3 601 200 601C166.7 601 133.3 601 100 601C66.7 601 33.3 601 16.7 601L0 601Z"
             fill="#fa7268" />
@@ -39,7 +39,7 @@
             d="M0 567L16.7 566.3C33.3 565.7 66.7 564.3 100 562.8C133.3 561.3 166.7 559.7 200 557.8C233.3 556 266.7 554 300 549.8C333.3 545.7 366.7 539.3 400 542.8C433.3 546.3 466.7 559.7 500 566C533.3 572.3 566.7 571.7 600 566.2C633.3 560.7 666.7 550.3 700 544.3C733.3 538.3 766.7 536.7 800 541.2C833.3 545.7 866.7 556.3 883.3 561.7L900 567L900 601L883.3 601C866.7 601 833.3 601 800 601C766.7 601 733.3 601 700 601C666.7 601 633.3 601 600 601C566.7 601 533.3 601 500 601C466.7 601 433.3 601 400 601C366.7 601 333.3 601 300 601C266.7 601 233.3 601 200 601C166.7 601 133.3 601 100 601C66.7 601 33.3 601 16.7 601L0 601Z"
             fill="#c62368" />
     </svg>
-    
+
     <div class="w-4/5 min-w-[300px] text-gray-100 bg-slate-200 font-sans shadow-2xl shadow-gray-900 rounded-lg lg:w-2/5 md:w-2/5 xl:w-1/5"
         id="modal" style="display: none;">
         <div class="relative px-4 py-2 bg-blue-600 rounded-t-lg">
